# code-document-service

./: README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  env.py  index_router.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/documents/api/: router.py  schema.py  service.py
app/documents/core/: chunking.py  embedding.py  generation.py  llm.py  retrieve.py  token.py  vectorstore.py
app/documents/core/prompt/: document_summary_prompt.py
app/documents/services/: parser.py  storage.py  summarizer.py
app/documents/tasks/: worker.py
database/: models.py
lifespan/: startup.py
migrations/versions/: 4675d3821fd6_move_document_text_to_r2_urls.py  97a9fddff7bc_create_documents_table.py  c73d83552e17_boolean.py
utils/: file_validation.py
