[project]
name = "code-document-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.42.84",
    "cryptography>=46.0.6",
    "docling>=2.84.0",
    "environs>=15.0.0",
    "fastapi>=0.135.3",
    "fastapi-voyager>=0.19.2",
    "langchain-cloudflare>=0.3.1",
    "langchain-core>=1.2.26",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.24",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
